# RBC-PINN-Surrogate

./: .gitignore  LICENSE  README.md  pyproject.toml  rbc.ipynb  test_rbc_pinn.py
configs/: 2d_ae.yaml  2d_cfno.yaml  2d_fno.yaml  2d_lran.yaml  2d_test.yaml  2d_unet.yaml  3d_ae.yaml  3d_fno.yaml  3d_lran.yaml  3d_test.yaml  3d_unet.yaml  ae.yaml  cfno.yaml  fno.yaml  fno3D.yaml  fno3D_test.yaml  lran.yaml  lran3D.yaml  pino.yaml  test_fno3D.yaml
configs/data/: 2d.yaml  3d.yaml
configs/experiment/: debug.yaml
configs/options/: debug.yaml  gpucluster.yaml
configs/paths/: default.yaml
notebooks/: data.ipynb  download_2d_results.py  download_3d_results.py  tm-1-2D-data.ipynb  tm-1-data.ipynb  tm-10-2D-superres.ipynb  tm-10-3D-superres.ipynb  tm-2-3D-data.ipynb  tm-3-2D-pino-loss.ipynb  tm-4-3D-fno.ipynb  tm-5-2D-data-control.ipynb  tm-6-2D-results.ipynb  tm-7-3D-results.ipynb  tm-8-3D-ablation.ipynb  tm-9-2D-cfno-results.ipynb
notebooks/res/: 2d-lran-nmse-ra10000.csv  2d-lran-nmse-ra100000.csv  2d-lran-nmse-ra1000000.csv  2d-lran-nmse-ra10000000.csv  2d-lran-nmse-ra30000.csv  2d-lran-nmse-ra300000.csv  2d-lran-nmse-ra3000000.csv  2d-lran-ra10000.csv  2d-lran-rmse-ra10000.csv  2d-lran-rmse-ra100000.csv  2d-lran-rmse-ra1000000.csv  2d-lran-rmse-ra10000000.csv  2d-lran-rmse-ra30000.csv  2d-lran-rmse-ra300000.csv  2d-lran-rmse-ra3000000.csv
scripts/: create_dataset.py  data.py  download_2d_results.py  download_3d_results.py  show_2d_vis.py  show_2d_vis_old.py  show_vis.py  test_2d.py  test_2d_cfno.py  test_2d_sr.py  test_3d.py  test_3d_fno.py  test_3d_lstm.py  test_3d_sr.py  test_fno_3D.py  test_vis.py  test_vis_paper.py  train_2d_ae.py  train_2d_cfno.py  train_2d_fno.py  train_2d_lran.py  train_2d_unet.py  train_3d_ae.py  train_3d_fno.py  train_3d_lran.py  train_3d_unet.py  train_ae_2D.py  train_cfno.py  train_fno.py  train_fno_3D.py  train_lran_2D.py  train_lran_3D.py  train_pino.py  train_rbc_pinn.py  tune_3d_fno.py  tune_fno_3D.py
slurm/: ae2D.sbatch  ae3D.sbatch  cfno.sbatch  create_dataset.sbatch  fno.sbatch  fno2D.sbatch  fno3D.sbatch  lran2D.sbatch  lran3D.sbatch  pino.sbatch  result_3d_fno.sbatch  result_3d_lran.sbatch  test_2d.sbatch  test_2d_cfno.sbatch  test_3d.sbatch  test_3d_fno_sr.sbatch  test_3d_fno_sr_cons.sbatch  test_fno3D.sbatch  test_fno_sr_cons.sbatch  test_vis.sbatch  train_2d_ae.sbatch  train_2d_cfno.sbatch  train_2d_fno.sbatch  train_2d_lran.sbatch  train_2d_unet.sbatch  train_3d_ae.sbatch  train_3d_fno.sbatch  train_3d_lran.sbatch  train_3d_unet.sbatch  tune_fno3D.sbatch
sweep/: sweep_2d_fno.sh  sweep_2d_fno.yaml  sweep_2d_fno2d_results.yaml  sweep_2d_fno3d_results.yaml  sweep_2d_fno_params.yaml  sweep_2d_fno_samples.yaml  sweep_2d_lran.sh  sweep_2d_lran.yaml  sweep_2d_lran_results.yaml  sweep_3d_fno.sh  sweep_3d_fno_length.yaml  sweep_3d_fno_no.yaml  sweep_3d_fno_params.yaml  sweep_3d_fno_samples.yaml  sweep_3d_lran.sh  sweep_3d_lran.yaml  sweep_fno.sh  sweep_fno.yaml  sweep_fno3d.sh  sweep_fno3d.yaml  sweep_fno3d_no.yaml  sweep_fno_ra_3D.yaml  sweep_fno_results_2D.yaml  sweep_lran.sh  sweep_lran.yaml  sweep_lran_ra.yaml  sweep_lran_results.yaml  wandb_agent.sbatch
(+560 files in other folders)
