[project]
name = "rbc-pinn-surrogate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "tmarkmann@techfak.uni-bielefeld.de" }
]
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "h5py>=3.14.0",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning[extra]>=2.5.1.post0",
    "neuraloperator>=1.0.2",
    "pandas>=2.3.0",
    "rbc-gym",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "torch==2.7.1",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.1",
    "wandb>=0.19.11",
]

[project.scripts]
rbc-pinn-surrogate = "rbc_pinn_surrogate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.6",
]

[tool.uv.sources]
rbc-gym = { git = "https://github.com/HammerLabML/RBC-Gym" }
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
